(Gen4) link misc tweak functionality to new methods